name:                fibers
version:             0.2.1.0
license:             BSD3
license-file:        LICENSE
author:              Yuta Taniguchi
maintainer:          Yuta Taniguchi <yuta.taniguchi.y.t@gmail.com>
category:            Data
build-type:          Simple
cabal-version:       >=1.10


library
  exposed-modules:     Fiber
                     , Spin
                     , Yarn
                     , Weave
  build-depends:       base                 >=4.7  && <4.8
                     , aeson                >=0.7  && <0.8
                     , attoparsec           >=0.11 && <0.12
                     , bytestring           >=0.10 && <0.11
                     , resourcet            >=1.1  && <1.2
                     , text                 >=1.1  && <1.2
                     , transformers         >=0.4  && <0.5
                     , unordered-containers >=0.2  && <0.3
                     , vector               >=0.10 && <0.11
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall


executable weaveJSON
  main-is:             Main.hs
  hs-source-dirs:      weaveJSON
  build-depends:       base                 >=4.7  && <4.8
                     , aeson                >=0.7  && <0.8
                     , bytestring           >=0.10 && <0.11
                     , fibers
                     , optparse-applicative >=0.9  && <0.10
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall
