name:                spinner
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Yuta Taniguchi
maintainer:          yuta.taniguchi.y.t@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10


library
  exposed-modules:     Spinner
                     , Fiber
  build-depends:       base         >=4.7  && <4.8
                     , aeson        >=0.7  && <0.8
                     , bytestring   >=0.10 && <0.11
                     , resourcet    >=1.1  && <1.2
                     , text         >=1.1  && <1.2
                     , transformers >=0.4  && <0.5
  default-language:    Haskell2010
